--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@ table {
   border-collapse: collapse;
   border-radius: 10px;
   background: rgb(10, 10, 10);
-  height: 100%;
+  height: fit-content;
   width: 100%;
   text-transform: capitalize;
 }
